== Version 1.0.6 (in SVN)

* Fixed [#10534] Windows: undefined method 'controller_name'

== Version 1.0.5
Bug fixes. Autotest plugin tweaks.

* Fixed [#11378] fix to 10814 broke drb (re-opened #10814)
* Fixed [#11223] Unable to access flash from rails helper specs
* Fixed [#11337] autotest runs specs redundantly
* Fixed [#11258] windows: autotest won't run
* Applied [#11253] Tweaks to autotest file mappings (Patch from Wincent Colaiuta)
* Applied [#11252] Should be able to re-load file containing shared behaviours without raising an exception (Patch from Wincent Colaiuta)
* Fixed [#11247] standalone autotest doesn't work because of unneeded autotest.rb
* Applied [#11221] Autotest support does not work w/o Rails Gem installed (Patch from Josh Knowles)

== Version 1.0.4
The getting ready for JRuby release.

* Fixed [#11181] behaviour_type scoping of config.before(:each) is not working
* added mock argument constraint matchers (anything(), boolean(), an_instance_of(Type)) which work with rspec or mocha
* added mock argument constraint matchers (any_args(), no_args()) which only work with rspec
* deprecated rspec's symbol mock argument constraint matchers (:any_args, :no_args, :anything, :boolean, :numeric, :string)
* Added tarball of rspec_on_rails to the release build to support folks working behind a firewall that blocks svn access.
* Fixed [#11137] rspec incorrectly handles flash after resetting the session
* Fixed [#11143] Views code for ActionController::Base#render broke between 1.0.0 and 1.0.3 on Rails Edge r6731
* Added raise_controller_errors for controller examples in Spec::Rails

== Version 1.0.3
Bug fixes.

* Fixed [#11104] Website uses old specify notation
* Applied [#11101] StringHelpers.starts_with?(prefix) assumes a string parameter for _prefix_
* Removed 'rescue nil' which was hiding errors in controller examples.
* Fixed [#11075] controller specs fail when using mocha without integrated_views